--- a/package.json
+++ b/package.json
@@ -1,54 +1,27 @@
 {
-  "name": "cordova-plugin-vuforia",
-  "description": "Cordova Vuforia Plugin",
-  "version": "3.2.1",
-  "homepage": "https://github.com/mattrayner/cordova-plugin-vuforia",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:mattrayner/cordova-plugin-vuforia.git"
-  },
-  "bugs": {
-    "url": "https://github.com/mattrayner/cordova-plugin-vuforia/issues"
-  },
-  "cordova": {
-    "id": "cordova-plugin-vuforia",
-    "platforms": [
-      "android",
-      "ios"
+  "name": "cordova-plugin-vuforia-background", "description": "Cordova Vuforia Background Plugin", "version": "0.0.1", "homepage": "https://github.com/laureckis/cordova-plugin-vuforia-background", "repository": {
+    "type": "git", "url": "git@github.com:laureckis/cordova-plugin-vuforia-background.git"
+  }, "bugs": {
+    "url": "https://github.com/laureckis/cordova-plugin-vuforia-background/issues"
+  }, "cordova": {
+    "id": "cordova-plugin-vuforia-background", "platforms": [
+      "android"
     ]
-  },
-  "keywords": [
-    "cordova",
-    "vuforia",
-    "ecosystem:cordova",
-    "cordova-android",
-    "cordova-ios",
-    "image",
-    "recognition",
-    "mattrayner"
-  ],
-  "engines": {
+  }, "keywords": [
+    "cordova", "vuforia", "ecosystem:cordova", "cordova-android", "cordova-ios", "image", "recognition", "mattrayner", "background"
+  ], "engines": {
     "cordovaDependencies": {
       ">=0.0.1": {
         "cordova": ">=5.0.0"
-      },
-      "<2.0.0": {
-        "cordova-ios": ">=3.0.0 <4.0.0",
-        "cordova-android": ">=4.0.0 <5.0.0"
-      },
-      ">=2.0.0": {
-        "cordova": ">=6.0.0",
-        "cordova-ios": ">=4.0.0",
-        "cordova-android": ">=5.0.0"
-      },
-      ">=3.0.0": {
+      }, "<2.0.0": {
+        "cordova-ios": ">=3.0.0 <4.0.0", "cordova-android": ">=4.0.0 <5.0.0"
+      }, ">=2.0.0": {
+        "cordova": ">=6.0.0", "cordova-ios": ">=4.0.0", "cordova-android": ">=5.0.0"
+      }, ">=3.0.0": {
         "cordova": ">=6.1.0"
       }
     }
-  },
-  "author": "Matthew Rayner",
-  "license": "MIT",
-  "dependencies": {
+  }, "author": "Aspired Ltd.", "license": "MIT", "dependencies": {
     "cordova-plugin-vuforia-sdk": "6.x.x"
   }
 }
