--- a/plugin.xml
+++ b/plugin.xml
@@ -2,93 +2,73 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="cordova-plugin-vuforia"
-        version="3.2.1">
-    <name>Vuforia</name>
-    <description>Cordova Vuforia Plugin</description>
+        id="cordova-plugin-vuforia-background"
+        version="0.0.1">
+    <name>Vuforia Background</name>
+    <description>Cordova Vuforia Background Plugin</description>
     <license>MIT</license>
-    <keywords>cordova,vuforia,image,recognition,augmented,reality</keywords>
-    <repo>git@github.com:mattrayner/cordova-plugin-vuforia.git</repo>
-    <issue>https://github.com/mattrayner/cordova-plugin-vuforia/issues</issue>
+    <keywords>cordova,vuforia,image,recognition,augmented,reality,background</keywords>
+    <repo>git@github.com:laureckis/cordova-plugin-vuforia.git</repo>
+    <issue>https://github.com/laureckis/cordova-plugin-vuforia/issues</issue>
 
-    <author>Matthew Rayner</author>
+    <author>Aļģis Laureckis</author>
 
     <info>
-        Cordova Vuforia Plugin version 3.2.1, Copyright (C) 2016 Matthew Rayner
-        Cordova Vuforia Plugin comes with ABSOLUTELY NO WARRANTY; see the
+        Cordova Vuforia Background Plugin version 0.0.1, Copyright (C) 2016 Matthew Rayner
+        based on https://github.com/mattrayner/cordova-plugin-vuforia by Matt Rayner
+        Cordova Vuforia Background Plugin comes with ABSOLUTELY NO WARRANTY; see the
         LICENSE file for more information.
         This is free software, and you are welcome to redistribute it
         under certain conditions; see the LICENSE file for more information.
     </info>
 
-    <js-module src="www/VuforiaPlugin.js" name="VuforiaPlugin">
-        <clobbers target="navigator.VuforiaPlugin" />
+    <js-module src="www/VuforiaBackgroundPlugin.js" name="VuforiaBackgroundPlugin">
+        <clobbers target="navigator.VuforiaBackgroundPlugin" />
     </js-module>
 
     <!-- android -->
     <platform name="android">
         <!-- Plugin Config -->
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="VuforiaPlugin" >
-                <param name="android-package" value="com.mattrayner.vuforia.VuforiaPlugin"/>
+            <feature name="VuforiaBackgroundPlugin" >
+                <param name="android-package" value="com.mattrayner.vuforia.VuforiaBackgroundPlugin"/>
             </feature>
         </config-file>
 
         <!-- Add our activities to the Android Manifest -->
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <activity
-                android:name="com.mattrayner.vuforia.app.ImageTargets"
+                android:name="lv.aspired.vuforia.app.ImageTargets"
                 android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
                 android:screenOrientation="landscape"
                 android:noHistory="true">
             </activity>
         </config-file>
 
-        <!-- Add our required strings -->
-        <config-file target="res/values/strings.xml" parent="/*">
-            <string name="button_OK">OK</string>
-        </config-file>
-
         <!-- Plugin Source -->
-        <source-file src="src/android/VuforiaPlugin.java" target-dir="src/com/mattrayner/vuforia" />
+        <source-file src="src/android/VuforiaPlugin.java" target-dir="src/lv/aspired/vuforia" />
 
         <!-- Assets -->
-        <resource-file src="src/android/res/drawable/devices.png" target="res/drawable/devices.png" />
-        <resource-file src="src/android/res/drawable-hdpi/devices.png" target="res/drawable-hdpi/devices.png" />
-        <resource-file src="src/android/res/drawable-xxhdpi/devices.png" target="res/drawable-xxhdpi/devices.png" />
-
-        <resource-file src="src/android/res/drawable/closebutton.png" target="res/drawable/closebutton.png" />
-        <resource-file src="src/android/res/drawable-hdpi/closebutton.png" target="res/drawable-hdpi/closebutton.png" />
-        <resource-file src="src/android/res/drawable-xxhdpi/closebutton.png" target="res/drawable-xxhdpi/closebutton.png" />
-
-        <resource-file src="src/android/res/drawable/closebutton_onpress.png" target="res/drawable/closebutton_onpress.png" />
-        <resource-file src="src/android/res/drawable-hdpi/closebutton_onpress.png" target="res/drawable-hdpi/closebutton_onpress.png" />
-        <resource-file src="src/android/res/drawable-xxhdpi/closebutton_onpress.png" target="res/drawable-xxhdpi/closebutton_onpress.png" />
-
-        <resource-file src="src/android/res/drawable/closebutton_selector.xml" target="res/drawable/closebutton_selector.xml" />
-        <resource-file src="src/android/res/drawable-hdpi/closebutton_selector.xml" target="res/drawable-hdpi/closebutton_selector.xml" />
-        <resource-file src="src/android/res/drawable-xxhdpi/closebutton_selector.xml" target="res/drawable-xxhdpi/closebutton_selector.xml" />
-
         <resource-file src="src/android/res/layout/camera_overlay.xml" target="res/layout/camera_overlay.xml" />
 
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/ImageTargets.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app" />
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/ImageTargetRenderer.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app" />
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/ApplicationControl.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app" />
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/ApplicationException.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app" />
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/ApplicationSession.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app" />
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/utils/LoadingDialogHandler.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app/utils" />
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/utils/MeshObject.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app/utils" />
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/utils/ApplicationGLView.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app/utils" />
-        <source-file src="src/android/java/com/mattrayner/vuforia/app/utils/Texture.java"
-                     target-dir="src/java/com/mattrayner/vuforia/app/utils" />
+        <source-file src="src/android/lv/aspired/vuforia/app/ImageTargets.java"
+                     target-dir="src/lv/aspired/vuforia/app" />
+        <source-file src="src/android/lv/aspired/vuforia/app/ImageTargetRenderer.java"
+                     target-dir="src/lv/aspired/vuforia/app" />
+        <source-file src="src/android/lv/aspired/vuforia/app/ApplicationControl.java"
+                     target-dir="src/lv/aspired/vuforia/app" />
+        <source-file src="src/android/lv/aspired/vuforia/app/ApplicationException.java"
+                     target-dir="src/lv/aspired/vuforia/app" />
+        <source-file src="src/android/lv/aspired/vuforia/app/ApplicationSession.java"
+                     target-dir="src/lv/aspired/vuforia/app" />
+        <source-file src="src/android/lv/aspired/vuforia/app/utils/LoadingDialogHandler.java"
+                     target-dir="src/lv/aspired/vuforia/app/utils" />
+        <source-file src="src/android/lv/aspired/vuforia/app/utils/MeshObject.java"
+                     target-dir="src/lv/aspired/vuforia/app/utils" />
+        <source-file src="src/android/lv/aspired/vuforia/app/utils/ApplicationGLView.java"
+                     target-dir="src/lv/aspired/vuforia/app/utils" />
+        <source-file src="src/android/lv/aspired/vuforia/app/utils/Texture.java"
+                     target-dir="src/lv/aspired/vuforia/app/utils" />
 
         <!-- Include our resources -->
         <resource-file src="targets/PluginTest.dat"
@@ -98,15 +78,15 @@
     </platform>
 
     <!-- ios -->
-    <platform name="ios">
-        <!-- config file -->
+<!--    <platform name="ios">
+         config file 
         <config-file target="config.xml" parent="/*">
             <feature name="VuforiaPlugin">
                 <param name="ios-package" value="VuforiaPlugin" />
             </feature>
         </config-file>
 
-        <!-- Add a value to our Info.plist file for iOS 10+ security permissions -->
+         Add a value to our Info.plist file for iOS 10+ security permissions 
         <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
             <string>To scan for images.</string>
         </config-file>
@@ -140,7 +120,7 @@
 
         <resource-file src="src/ios/Assets/ImageTargets/close-button.png" target-dir="Resources" />
         <resource-file src="src/ios/Assets/ImageTargets/iOSDevices.png" target-dir="Resources" />
-    </platform>
+    </platform>-->
 
     <dependency id="cordova-plugin-vuforia-sdk" version="6.x.x" />
 </plugin>
